--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Linux para jovenes</title>
+    <title>Document</title>
 </head>
 <body>
     <h1>Linux</h1>
     <div class="container-grid">
         <div class="container">
-            <img src="assets/whatis.jpg" class="image">
+            <img src="assets/index/whatis.jpg" class="image">
             <a href="whatis.html" class="intro-text">Que es</a>
         </div>
         <div class="container">
-            <img src="assets/why.jpg" class="image">
+            <img src="assets/index/why.jpg" class="image">
             <a href="whatis.html" class="intro-text">Ventajas y desventajas</a>
         </div>
         <div class="container">
-            <img src="assets/whereis.jpg" class="image">
+            <img src="assets/index/whereis.jpg" class="image">
             <a href="whatis.html" class="intro-text">Donde es mas usado</a>
         </div>
         <div class="container">
-            <img src="assets/whyto.jpg" href="whatis.html" class="image">
+            <img src="assets/index/whyto.jpg" href="whatis.html" class="image">
             <a href="whatis.html" class="intro-text">Porque deberiamos usarlo
             </a>
         </div>
         <div class="container">
-            <img src="assets/commands.jpg" class="image">
-            <a href="whatis.html" class="intro-text">Comandos basicos</a>
+            <img src="assets/index/commands.jpg" class="image">
+            <a href="commands.html" class="intro-text">Comandos basicos</a>
         </div>
         <div class="container">
-            <img src="assets/Tux.png" class="image">
+            <img src="assets/index/Tux.png" class="image">
             <a href="whatis.html" class="intro-text">Guia instalacion</a>
         </div>
     </div>
